--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <img alt="" class="u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-image u-image-default u-image-3" data-image-width="826" data-image-height="561" src="images/embreve1.png"><span class="u-custom-item u-file-icon u-icon u-text-custom-color-2 u-icon-6"><img src="images/102279-adccc655.png" alt=""></span>
+                <img alt="" class="u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-image u-image-default u-image-3" data-image-width="826" data-image-height="561" src="images/medica-conversando-com-seu-paciente-mais-velho.jpg"><span class="u-custom-item u-file-icon u-icon u-text-custom-color-2 u-icon-6"><img src="images/102279-adccc655.png" alt=""></span>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-white u-text-14">40%<br>OFF
                 </h3>
                 <div class="u-custom-color-2 u-radius-10 u-shape u-shape-round u-shape-5"></div>
